--- a/README
+++ b/README
@@ -8,3 +8,11 @@ git config --global user.email "email@domain.com"
 Create an SSH keypair to be used as GitHub deploy keys. We'll use the computername as key comment, leave the passphrase empty and move the generated keypair to the new repository. We also limit access to the owner or pushing to GitHub is blocked:
 
     ssh-keygen -t rsa -b 4096 -C "keyname"
+
+
+## Check if ssh key works
+
+$ ssh -T git@github.com
+# Attempt to SSH in to github
+> Hi USERNAME! You've successfully authenticated, but GitHub does not provide
+> shell access.
