--- a/README
+++ b/README
@@ -7,7 +7,16 @@ git config --global user.email "email@domain.com"
 
 Create an SSH keypair to be used as GitHub deploy keys. We'll use the computername as key comment, leave the passphrase empty and move the generated keypair to the new repository. We also limit access to the owner or pushing to GitHub is blocked:
 
-    ssh-keygen -t rsa -b 4096 -C "keyname"
+    ssh-keygen -t rsa -b 4096 -C "your_email@example.com"
+
+Adding your SSH key to the ssh-agent
+Before adding a new SSH key to the ssh-agent to manage your keys, you should have checked for existing SSH keys and generated a new SSH key.
+Start the ssh-agent in the background.
+
+ssh-agent -s
+
+Then add your ssh key to working agent
+ssh-add ~/.ssh/key_name
 
 
 ## Check if ssh key works
