--- a/README
+++ b/README
@@ -1,27 +1,25 @@
 
-## Got configuration
+## Git configuration
 git config --global user.name "your name"
 git config --global user.email "email@domain.com"
 
 ## SSH Keypair
 
-Create an SSH keypair to be used as GitHub deploy keys. We'll use the computername as key comment, leave the passphrase empty and move the generated keypair to the new repository. We also limit access to the owner or pushing to GitHub is blocked:
+Create an SSH keypair and leave the passphrase empty:
 
-    ssh-keygen -t rsa -b 4096 -C "your_email@example.com"
+    $ ssh-keygen -t rsa -b 4096 -C "email@example.com"
 
-Adding your SSH key to the ssh-agent
-Before adding a new SSH key to the ssh-agent to manage your keys, you should have checked for existing SSH keys and generated a new SSH key.
+## Add your SSH key to the ssh-agent
 Start the ssh-agent in the background.
 
-ssh-agent -s
+    $ ssh-agent -s
 
-Then add your ssh key to working agent
-ssh-add ~/.ssh/key_name
+Then add your ssh-key to working agent:
+    $ ssh-add ~/.ssh/key_name
 
+## Check if ssh-key works
 
-## Check if ssh key works
-
-$ ssh -T git@github.com
+    $ ssh -T git@github.com
 # Attempt to SSH in to github
 > Hi USERNAME! You've successfully authenticated, but GitHub does not provide
 > shell access.
